--- a/WebApplication1/Views/Home/AddEditExpenses.cshtml
+++ b/WebApplication1/Views/Home/AddEditExpenses.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Create / Edit";
 }
-@model WebApplication1.Models.Expense
+@model ExpenseManager.Models.Expense
 
 <div class="text-center">
     <h1 class="display-4">Create or Edit an Expense</h1>
