--- a/WebApplication1/Views/Home/DeleteExpenses.cshtml
+++ b/WebApplication1/Views/Home/DeleteExpenses.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Delete";
 }
-@model WebApplication1.Models.Expense
+@model ExpenseManager.Models.Expense
 
 <div class="text-center">
     <h1 class="display-4">Delete this expense?</h1>
